[package]
name = "wasm_merkle_crdt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexed_db_futures = "0.3.0"
js-sys = "0.3.63"
sha3 = "0.10.8"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"

[dependencies.web-sys]
version = "0.3.63"
features = [
  'console',
  'Document',
  'HtmlElement',
  'MessageEvent',
  'Window',
  'Worker',
]
